# monke-discord-bot

./: Cargo.toml  README.md
aws/: package-lock.json  package.json
aws/lib/: aws-stack.ts  bot-stack.ts  lp-stack.ts
bot/: Cargo.toml
bot/src/: discord.rs  error.rs  main.rs
bot/src/commands/: list.rs  mod.rs  ping.rs  recap.rs  track.rs  untrack.rs  winrate.rs
bot/src/db/: mod.rs
lp-db/: Cargo.toml
lp-db/src/: error.rs  lib.rs
lp-db/src/builders/: mod.rs
lp-db/src/builders/league_points/: add.rs  between.rs  get.rs  mod.rs
lp-db/src/builders/tracking/: mod.rs  user.rs
lp-serv/: Cargo.toml
lp-serv/src/: main.rs
riot-sdk/: Cargo.toml
riot-sdk/src/: lib.rs  matches.rs  summoner.rs
riot-sdk/src/account/: mod.rs
riot-sdk/src/league/matches/: details.rs  ids.rs  mod.rs
riot-sdk/src/league/summoner/: league.rs  mod.rs  name.rs  puuid.rs
riot-sdk/src/tft/matches/: details.rs  ids.rs  mod.rs
riot-sdk/src/tft/summoner/: league.rs  mod.rs  name.rs
src/: discord.rs  error.rs  main.rs
src/commands/: mod.rs  recap.rs  winrate.rs
src/db/: mod.rs
src/riot/: league.rs  mod.rs
src/riot/matches/: details.rs  ids.rs  mod.rs
src/riot/summoner/: league.rs  mod.rs  name.rs
